# nubank_fatura_2_csv

./: README.md  pyproject.toml
nubank_fatura_2_csv/: nufatura2csv.py
