[tool.poetry]
name = "nubank-fatura-2-csv"
version = "0.1.0"
description = ""
authors = ["gmap"]
readme = "README.md"
packages = [{include = "nubank_fatura_2_csv"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.22.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nufatura2csv = "nubank_fatura_2_csv.nufatura2csv:main"
